# erp

./: CMakeLists.txt  README.md
prjs/msvs/Erp/: Erp.vcxproj  Erp.vcxproj.filters
src/: default_commands_handler.cpp  default_commands_handler.h  hardcode.cpp  hardcode.h  main.cpp
src/erp/: container.h  department.cpp  department.h  employee.cpp  employee.h  enterprise.cpp  enterprise.h  erp_utils.cpp  erp_utils.h  reglament.h  tasks.h
src/utils/: common.h  lines.h  stream_lines.cpp  stream_lines.h  tokenizers.cpp  tokenizers.h
